# the-little-schemer

./: .gitignore  README  README.md  hrs.py  io.hi  matrixVector.js  nn.js  savings.hs  vectorFn.js
LittleSchemer/: Chapter2.hs  Chapter3.hs  chapter2.hs
SimpleLinearAlgebra/: vector.hs
bash/: replace.sh
c-programs/: notes.c  vector.c
c-programs/euler/: a.out  problem1.c
c-programs/exercises/: divisor.c  fib.c  is_prime.c  is_square.c
c/lalgebra/: a.out  lalgebra.c
chat-gpt/: visitorPatternTemplate.ts
clojure-programs/rest-api/: CHANGELOG.md  project.clj
config_and_fix/: calibre.txt  carla-simulator.txt  system76-keyword-colors.txt  texlive.txt
config_and_fix/manjaro/: fixmanjaro.txt
fix/: create-react-app-vite.txt  update_chrome.txt
fix/githubssh/: setupconfig.txt
generate-x86/: README.md
generate-x86/pycompiler_generated_assembly/: anfif.s  arrayeg.s  example1.s  example3.s  ifexample1.s  matrixadd.s  (+6 more)
go-programs/: readme.md
haskell-programs/: derivative.hs  derive.hs  generic.hs  io.hs  savings.hs
haskell-programs/redishaskell/: red.cabal
haskell-programs/redishaskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell-programs/redishaskell/src/: Main.hs
llvm/: README.md  inputs.cpp
my_productivity/: hrs.py
neural_network_graphs/: README  conv.py  graph.py
racket-programs/: parser.rkt
ts_project/: .gitignore  README
typescript-programs/: tslib.js  tslib.ts
x86-64/: Makefile  README  complex_addition.s  hello.asm  printf.asm  simple_addition.s
(+44 files in other folders)
