cabal-version: 1.12

-- The name of the project
name:           red

-- The version of the project
version:        0.1.0.0

-- License information
license:        BSD3
license-file:   LICENSE

-- Author information
author:         Your Name
maintainer:     your.email@example.com

-- A brief description of the project
synopsis:       A Redis-based recommender system in Haskell

-- A longer description of the project
description:    
    This project is a simple implementation of a recommender system using
    Redis as the backend, written in Haskell.

-- The category this project belongs to
category:       Database, Recommender Systems

-- Source directories for the project
build-type:     Simple

-- Specify the GHC options
ghc-options:    -Wall

-- The executable section describes the properties of the compiled executable
executable redis-recommender
    -- The main source file for the executable
    main-is:          Main.hs

    -- Additional directories to be searched for source files
    hs-source-dirs:   src

    -- The dependencies for the executable
    build-depends:    base >=4.7 && <5,
                      hedis,
		      bytestring

    -- The default language for the project
    default-language: Haskell2010
